# aegis-server

./: Cargo.toml  LICENSE  Makefile  README.md  TODO.org
.github/workflows/: rust.yml
src/: configuration.rs  logging.rs  main.rs  protocol.rs  redis.rs  util.rs
src/output/: mod.rs  redis_pubsub.rs
