[package]
name = "aegis-server"
version = "0.1.0"
authors = ["Josh Burns <joshyburnss@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
serde_derive = "1.0.104"
futures = "0.3"
config = "0.9"
chrono = "0.4.10"
