[package]
name = "aegis-server"
version = "0.1.0"
authors = ["Josh Burns <joshyburnss@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.2", features = ["codec"] }
serde_derive = "1.0.104"
futures = "0.3"
serde_json = "1.0"
serde = { version = "1.0.104", features = ["derive"] }
simplelog = "0.7.4"
log = "0.4.8"
toml = "0.5.6"
